@@ -23,6 +23,11 @@ enum {
     wxC2S_HTML_SYNTAX,      // return colour in #rrggbb syntax     
 };
 
+enum {
+    wxALPHA_TRANSPARENT,
+    wxALPHA_OPAQUE
+};
+
 
 DocStr(wxColour,
 "A colour is an object representing a combination of Red, Green, and
@@ -53,7 +58,7 @@ class wxColour : public wxObject {
 public:
     
     DocCtorStr(
-        wxColour(byte red=0, byte green=0, byte blue=0),
+        wxColour(byte red=0, byte green=0, byte blue=0, byte alpha=wxALPHA_OPAQUE),
         "Constructs a colour from red, green and blue values.
 
 :see: Alternate constructors `wx.NamedColour` and `wx.ColourRGB`.
@@ -86,12 +91,16 @@ public:
         "Returns the blue intensity.", "");
     
     DocDeclStr(
+        byte , Alpha(),
+        "Returns the Alpha value.", "");
+    
+    DocDeclStr(
         bool , Ok(),
         "Returns True if the colour object is valid (the colour has been
 initialised with RGB values).", "");
     
     DocDeclStr(
-        void , Set(byte red, byte green, byte blue),
+        void , Set(byte red, byte green, byte blue, byte alpha=wxALPHA_OPAQUE),
         "Sets the RGB intensity values.", "");
 
     DocDeclStrName(
@@ -155,19 +164,23 @@ is returned if the pixel is invalid (on X, unallocated).", "");
         DocAStr(Get,
                 "Get() -> (r, g, b)",
                 "Returns the RGB intensity values as a tuple.", "");
-        PyObject* Get() {
-            PyObject* rv = PyTuple_New(3);
+        PyObject* Get(bool includeAlpha=false) {
+            PyObject* rv = PyTuple_New(includeAlpha ? 4 : 3);
             int red = -1;
             int green = -1;
             int blue = -1;
+            int alpha = wxALPHA_OPAQUE;
             if (self->Ok()) {
                 red =   self->Red();
                 green = self->Green();
                 blue =  self->Blue();
+                alpha = self->Alpha();
             }
             PyTuple_SetItem(rv, 0, PyInt_FromLong(red));
             PyTuple_SetItem(rv, 1, PyInt_FromLong(green));
             PyTuple_SetItem(rv, 2, PyInt_FromLong(blue));
+            if (includeAlpha)
+                PyTuple_SetItem(rv, 3, PyInt_FromLong(alpha));                
             return rv;
         }
 
@@ -181,11 +194,11 @@ is returned if the pixel is invalid (on X, unallocated).", "");
 
     %pythoncode {
         asTuple = wx._deprecated(Get, "asTuple is deprecated, use `Get` instead")
-        def __str__(self):                  return str(self.Get())
-        def __repr__(self):                 return 'wx.Colour' + str(self.Get())
+        def __str__(self):                  return str(self.Get(True))
+        def __repr__(self):                 return 'wx.Colour' + str(self.Get(True))
         def __nonzero__(self):              return self.Ok()
         __safe_for_unpickling__ = True
-        def __reduce__(self):               return (Colour, self.Get())
+        def __reduce__(self):               return (Colour, self.Get(True))
         }
 };
 
